@@ -39,6 +39,7 @@ OTHER CONTRIBUTORS
 	George Garvey
 	Mikael Hultgren
 	Stuart Levy
+	Howard Lightstone
 	Mike Lindner
 	Alexander Mai
 	Alexander Rabi
