@@ -1,6 +1,9 @@
 CHANGES IN FLTK 1.1.3
 
 	- Documentation updates.
+	- Additional NULL checks in Fl_Button,
+	  fl_draw_boxtype(), Fl_File_Chooser, and
+	  Fl_Window::hotspot().
 	- The Fl_Preferences header file needed to FL_EXPORT all
 	  of the nested classes for WIN32.
 	- Fl_Double_Window couldn't be nested on WIN32. [SF Bug
